// Copyright Â© 2016 Zenly <hello@zen.ly>.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package zenly.protein;

import "google/protobuf/descriptor.proto";
import "protobuf/gogoproto/gogo.proto";

// -----------------------------------------------------------------------------

option go_package = "protein";

option java_multiple_files = true;
option java_package = "co.znly.protein";

option (gogoproto.marshaler_all) = false;
option (gogoproto.unmarshaler_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.protosizer_all) = false;
option (gogoproto.unsafe_marshaler_all) = false;
option (gogoproto.unsafe_unmarshaler_all) = false;
option (gogoproto.stable_marshaler_all) = false;
option (gogoproto.typedecl_all) = true;
option (gogoproto.gostring_all) = true;
option (gogoproto.stringer_all) = false;
option (gogoproto.onlyone_all) = false;

// -----------------------------------------------------------------------------

// ProtobufSchema is a versioned protobuf Message or Enum descriptor that can
// be used to decode `ProtobufPayload`s at runtime.
//
// See `ScanSchemas`'s documentation for more information.
message ProtobufSchema {
	// SchemaUID is the unique, deterministic & versioned identifier of this
	// schema.
	string schema_uid = 1 [(gogoproto.customname) = "SchemaUID"];
	// FQName is the fully-qualified name of this schema,
	// e.g. `.google.protobuf.Timestamp`.
	string fq_name = 2 [(gogoproto.customname) = "FQName"];
	// Descriptor is either a Message or an Enum protobuf descriptor.
	oneof descr {
		// Message is the protobuf descriptor of a Message type.
		google.protobuf.DescriptorProto     msg = 30 [(gogoproto.customname) = "Message"];
		// Enum is the protobuf descriptor of an Enum type.
		google.protobuf.EnumDescriptorProto enm = 31 [(gogoproto.customname) = "Enum"];
	}
	// Deps contains every direct and indirect dependencies that this schema
	// relies on.
	//
	// Key: the dependency's `schemaUID`
	// Value: the dependency's fully-qualified name
	map<string, string> deps = 4 [(gogoproto.nullable) = false];
}
